--- a/src/routes/RootLayout.module.css
+++ b/src/routes/RootLayout.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   inline-size: 100%;
-  min-block-size: 100vh;
+  min-block-size: 0;
   min-inline-size: 0;
   overflow: hidden;
 }
